styles.css
body {
  background-color: #000000;
  font-family: "Biryani", sans-serif;
  margin: 0;
}

@font-face {
  font-family: "GoboldHigh";
  src: url("GoboldHigh.woff2") format("woff2"),
    url("GoboldHigh.woff") format("woff");
}

.parallax {
  perspective: 1px;
  min-height: 100vh;
  overflow-x: hidden;
  overflow-y: auto;
}

.parallax__layer {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}

.parallax__layer--back {
  transform: translateZ(-1px) scale(2);
  z-index: 3;
}

.parallax__layer--base {
  transform: translateZ(0);
  z-index: 4;
}

.parallax__layer--fore {
  /* -webkit-transform: translateZ(90px) scale(0.7); */
  /* transform: translateZ(90px) scale(0.7); */
  left: 50%;
  transform: translateX(-50%);
  z-index: 6;
}

.parallax {
  perspective-origin-x: 100%;
}
.parallax__layer {
  transform-origin-x: 100%;
}

.parallax__group {
  position: relative;
  min-height: 100vh;
  transform-style: preserve-3d;
}

.ep {
  -moz-background-size: cover;
  -o-background-size: cover;
  -webkit-background-size: cover;
  -webkit-box-shadow: inset 0px -34px 50px 2px #000000;
  animation-duration: 5s;
  animation-name: fade-in-bg;
  animation-timing-function: ease-out;
  background-color: #000000;
  background-image: url("web.webp");
  background-position: bottom center;
  background-repeat: no-repeat;
  background-size: cover;
  box-shadow: inset 0px -34px 50px 2px #000000;
  filter: brightness(40%);
}

.band {
  background-image: url("novembersoundsbetter_web-19.jpeg");
  background-repeat: no-repeat;
  background-position: center center;
}

.filter-brightness--5 {
  filter: brightness(5%);
}

h1,
h2 {
  font-family: "GoboldHigh";
}

h1 {
  animation-duration: 6s;
  animation-name: fade-in;
  animation-timing-function: ease-out;
  color: hsla(0, 0%, 95%, 0.8);
  font-size: 8rem;
  letter-spacing: 1.5rem;
  padding-left: 1.5rem;
  opacity: 1;
  text-align: center;
  text-shadow: 0px -12px 50px hsla(153, 12%, 5%, 0.9),
    0px 12px 50px hsla(153, 12%, 5%, 0.9);
}

@media screen and (max-width: 1024px) {
  h1 {
    text-shadow: 0px -12px 20px hsla(153, 12%, 5%, 0.9),
      0px 12px 20px hsla(153, 12%, 5%, 0.9);
  }
}

@media screen and (max-width: 768px) {
  h1 {
    letter-spacing: 1rem;
    text-shadow: 0px -4px 10px hsla(153, 12%, 10%, 0.2),
      0px 4px 10px hsla(153, 12%, 10%, 0.2);
  }
}

@keyframes fade-in-bg {
  from {
    filter: brightness(300%);
    margin: -200px;
    opacity: 0;
  }
  to {
    filter: brightness(40%);
    opacity: 1;
    margin: 0;
  }
}

@keyframes fade-in {
  0% {
    opacity: 0;
  }
  20% {
    opacity: 0;
    transform: scale(1.3);
  }
  100% {
    transform: scale(1);
    opacity: 1;
  }
}

@keyframes fade-in-text {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

@keyframes scale-in {
  from {
    margin-bottom: -50%;
    flex: 1 1 0%;
  }
  to {
    margin-bottom: 0;
    flex: 1 1 100%;
  }
}

ul {
  text-align: center;
  color: white;
}

li {
  color: white;
}

.songs {
  text-transform: uppercase;
  animation: fade-in-text 1s ease-in-out 6.3s both,
    scale-in 1s ease-in-out 6.3s both;
  text-shadow: 0px -10px 10px hsla(153, 12%, 5%, 0.5),
    0px 10px 10px hsla(153, 12%, 5%, 0.5);
  letter-spacing: 0.5rem;
}

.leading-16 {
  line-height: 1.5;
}

.color-nsb-primary {
  color: #d1ba54;
}

@keyframes rotate {
  0% {
    transform: rotateY(80deg);
  }
  10% {
    transform: rotateY(80deg);
  }
  100% {
    transform: rotateY(0deg);
  }
}

@keyframes flickering {
  0% {
    color: white;
    text-decoration: none;
  }
  50% {
    color: black;
    text-decoration: line-through;
  }
  100% {
    color: white;
    text-decoration: none;
  }
}

.char {
  animation: rotate 10s ease-out;
  display: inline-block;
}

@media (min-width: 1024px) {
  .char {
    animation: rotate 10s ease-out, flickering 300ms linear 3.8s;
    display: inline-block;
  }
}

